--- a/SocialHub-dashboard/css/styles.css
+++ b/SocialHub-dashboard/css/styles.css
@@ -1,4 +1,5 @@
 body{
+    
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -70,8 +71,10 @@ body{
 #sidebar{
     grid-area: sidebar;
     height: 100%;
-    background-color: #4170fd;
+   background-color: #4170fd;
+   
     color: white;
+    
     overflow-y: auto;
     transition: all 0.5s;
     -webkit-transition: all 0.5s;
@@ -97,15 +100,22 @@ body{
     padding: 0;
     margin-top: 15px;
     list-style-type: none;
+    
+    
 }
 
 .sidebar-list-item{
     padding: 20px 20px 20px 20px;
+    color: white;
+    transition: text-indent 0.15s;
+    
 }
 
 .sidebar-list-item:hover{
     background-color: rgba(255, 255, 255, 0.2);
     cursor: pointer;
+    text-indent: 1px;
+    
 }
 .sidebar-responsive{
     display: inline !important;
@@ -120,7 +130,22 @@ body{
 
 .main-title{
     display: flex;
-    justify-content: space-between;
+    justify-content: start;
+    
+    
+}
+#expend_btn{
+    margin-left: 20px;
+    background-color: transparent;
+    border: none;
+
+}
+
+#hide_btn{
+    margin-left: 20px;
+    background-color: transparent;
+    border: none;
+
 }
 .main-title > p{
     font-size: 20px;
@@ -133,6 +158,12 @@ body{
    gap:20px;
    margin: 20px 0;
 }
+.card_extra{
+    display: grid;
+   grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr; 
+   gap:5px;
+   margin: 5px 0;
+}
 
 .card{
     display: flex;
@@ -144,7 +175,19 @@ body{
     border: 2px solid #246dec;
     border-radius: 10px;
     box-shadow: 0 6px 7px -4px rgba(0, 0, 0, 0.2);
+    border-left: 7px solid #246dec;
+
+    
 }
+#expend_btn{
+    color:#246dec;
+}
+
+#hide_btn{
+    color:#246dec;
+    display: none;
+}
+/*
 .card:first-child{
     border-left: 7px solid #246dec;
 }
@@ -156,6 +199,13 @@ body{
 .card:nth-child(3){
     border-left: 7px solid #246dec;
 }
+*/
+.card_extra{
+    display: none;
+}
+
+
+
 
 .card > span{
     font-size: 20px;
@@ -179,6 +229,8 @@ body{
     display: grid;
     grid-template-columns: 1fr 1fr;
     gap: 20px;
+    /*display: none;*/
+    
 }
 .charts-card{
     background-color: rgb(215, 219, 250);
@@ -189,6 +241,7 @@ body{
     border: 2px solid #246dec;
     border-radius: 10px;
     box-shadow: 0 6px 7px -4px rgba(0, 0, 0, 0.2);
+    
 }
 
 .chart-title{
@@ -204,6 +257,25 @@ body{
     display: grid;
     grid-template-columns: 1fr;
     gap: 20px;
+    /*display: none;*/
+}
+.chart_daily{
+    display: grid;
+    grid-template-columns: 1fr;
+    gap: 20px;
+    /*display: none;*/
+}
+.chart_weekly{
+    display: none;
+    grid-template-columns: 1fr;
+    gap: 20px;
+    /*display: none;*/
+}
+.chart_monthly{
+    display: none;
+    grid-template-columns: 1fr;
+    gap: 20px;
+    /*display: none;*/
 }
 .charts-card2{
     background-color: rgb(215, 219, 250);
@@ -223,4 +295,21 @@ body{
     justify-content: center;
     font-size: 22px;
     font-weight: 600;
+}
+/*
+.fltr_btn{
+    margin-top: 20px;
+    margin-left: 20px;
+    background-color: transparent;
+    border: none;
+    color:#246dec;
+}
+*/
+#daily_btn, #weekly_btn, #monthly_btn{
+    justify-content: left;
+    margin-top: 15px;
+    margin-left: 10px;
+    background-color: transparent;
+    border: none;
+    color:#246dec;
 }
